Update pnpm-workspace.yaml to include '@tailwindcss/oxide' and 'bcrypt' as built dependencies.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,8 @@ onlyBuiltDependencies:
   - '@parcel/watcher'
   - '@prisma/client'
   - '@prisma/engines'
+  - '@tailwindcss/oxide'
+  - bcrypt
   - esbuild
   - prisma
   - sharp
