--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NUXT_PUBLIC_APP_VERSION=1.0.0
 
 # --------------------------------- Database --------------------------------- #
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/nuxt_fusion
+DIRECT_URL=postgresql://postgres:postgres@localhost:5432/nuxt_fusion
 
 # ----------------------------------- Auths ---------------------------------- #
 NUXT_SESSION_PASSWORD=password-with-at-least-32-characters
