feat: Integrate Supabase for backend services by adding configuration and dependencies

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ NUXT_SESSION_PASSWORD=password-with-at-least-32-characters
 NUXT_OAUTH_FACEBOOK_CLIENT_ID=
 NUXT_OAUTH_FACEBOOK_CLIENT_SECRET=
 
+SUPABASE_URL=
+SUPABASE_KEY=
+
 # ----------------------------------- Email ---------------------------------- #
 NUXT_SMTP_HOST=
 NUXT_SMTP_PORT=
