--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/i18n": "^10.0.3",
     "@nuxtjs/seo": "^3.1.0",
+    "@nuxtjs/supabase": "^1.6.0",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.13.0",
     "@tailwindcss/vite": "^4.1.11",
