--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "typecheck": "nuxt typecheck",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "db:reset": "dotenv -- pnpm prisma db push --force-reset",
+    "db:generate": "dotenv -- pnpm prisma generate",
+    "db:push": "dotenv -- pnpm prisma db push",
+    "db:reset": "dotenv -- pnpm prisma db reset",
     "db:seed": "dotenv -- pnpm tsx server/services/prisma/seeders/index.ts",
     "prepare": "nuxt prepare",
     "test": "vitest --run",
@@ -44,7 +46,6 @@
     "mustache": "^4.2.0",
     "nodemailer": "7.0.5",
     "nuxt": "^4.0.1",
-    "nuxt-auth-utils": "^0.5.23",
     "nuxt-authorization": "^0.3.5",
     "nuxt-gtag": "^3.0.3",
     "nuxt-zod-i18n": "1.11.5",
