--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.6.0",
     "@vueuse/nuxt": "^13.6.0",
+    "@vueuse/router": "^13.6.0",
     "crossws": "^0.4.1",
     "es-toolkit": "^1.39.8",
     "html-minifier-terser": "^7.2.0",
