--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@intlify/h3": "^0.7.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/image": "^1.11.0",
+    "@nuxt/scripts": "0.11.10",
     "@nuxtjs/i18n": "^10.0.3",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/supabase": "^1.6.0",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.13.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@unhead/vue": "^2.0.13",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.6.0",
@@ -84,6 +86,7 @@
     "@types/node": "^24.2.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pluralize": "^0.0.33",
+    "@types/youtube": "^0.1.2",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
