--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "build:max": "node --max-old-space-size=12288 node_modules/nuxt/bin/nuxt.mjs build",
     "dev": "nuxt dev",
     "dev:max": "node --max-old-space-size=12288 node_modules/nuxt/bin/nuxt.mjs dev",
     "dev:host": "nuxt dev --host",
