--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "0.11.10",
     "@nuxtjs/i18n": "^10.0.3",
+    "@nuxtjs/leaflet": "1.3.2",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/supabase": "^1.6.0",
     "@pinia/nuxt": "^0.11.2",
