--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "es-toolkit": "^1.39.8",
     "html-minifier-terser": "^7.2.0",
     "http-status-codes": "^2.3.0",
+    "libphonenumber-js": "^1.12.11",
     "mime": "^4.0.7",
     "mustache": "^4.2.0",
     "nodemailer": "7.0.5",
