--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "^6.13.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@turf/turf": "^7.2.0",
     "@unhead/vue": "^2.0.13",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/zod": "^4.15.1",
