refactor: Remove Google Cloud Storage integration and update file handling to use local file storage with formatted filenames

--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,5 @@ NUXT_SITE_URL=http://localhost:3000
 NUXT_PUBLIC_GTAG_ID=G-XXXXXXXXXX
 
 # ------------------------------------ GCS ----------------------------------- #
-NUXT_FILE_STORAGE_BUCKET_NAME=your-project.appspot.com
-NUXT_FILE_STORAGE_BUCKET_ENTRY_POINT=https://storage.googleapis.com/your-project.appspot.com
-# For seed data NUXT_FILE_STORAGE_BUCKET_ENTRY_POINT=https://cloudflare-ipfs.com
-NUXT_FILE_STORAGE_SERVICE_ACCOUNT_NAME=secret.account.json
-NUXT_FILE_STORAGE_SIGNED_URL_EXPIRATION=1200000 # 20 minutes
+NUXT_FILE_STORAGE_BUCKET_NAME=
+NUXT_FILE_STORAGE_BUCKET_ENTRY_POINT=
