--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@vueuse/nuxt": "^13.6.0",
     "@vueuse/router": "^13.6.0",
     "crossws": "^0.4.1",
+    "csv-stringify": "^6.6.0",
     "es-toolkit": "^1.39.8",
     "html-minifier-terser": "^7.2.0",
     "http-status-codes": "^2.3.0",
