feat: Implement bulk office creation feature with CSV.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@prisma/client": "^6.13.0",
     "@tailwindcss/vite": "^4.1.11",
     "@turf/turf": "^7.2.0",
+    "@types/papaparse": "^5.3.16",
     "@unhead/vue": "^2.0.13",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/zod": "^4.15.1",
@@ -62,6 +63,7 @@
     "nuxt-authorization": "^0.3.5",
     "nuxt-gtag": "^3.0.3",
     "nuxt-zod-i18n": "1.11.5",
+    "papaparse": "^5.5.3",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "sharp": "^0.34.3",
