feat: Implement API shield configuration for request limits in environment and Nuxt config

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,6 @@ NUXT_PUBLIC_GTAG_ID=G-XXXXXXXXXX
 # ------------------------------------ GCS ----------------------------------- #
 NUXT_FILE_STORAGE_BUCKET_NAME=
 NUXT_FILE_STORAGE_BUCKET_ENTRY_POINT=
+
+# Security
+NUXT_API_SHIELD_MAX_REQUESTS=100
