feat: Add server API test configuration to Vitest setup

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test:server": "vitest --run --project server",
     "test:shared": "vitest --run --project shared",
     "test:server-core": "vitest --run --project server-core",
+    "test:server-api": "vitest --run --project server-api",
     "test:watch": "vitest",
     "test:ui": "vitest --ui --open"
   },
