chore: Update test script paths in package.json and add new dependencies for enhanced functionality

--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "prepare": "nuxt prepare",
     "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
-    "test:app": "vitest --run --project app",
-    "test:app-components": "vitest --run --project app-components",
-    "test:app-pages": "vitest --run --project app-pages",
-    "test:server": "vitest --run --project server",
-    "test:shared": "vitest --run --project shared",
-    "test:server-core": "vitest --run --project server-core",
-    "test:server-api": "vitest --run --project server-api",
+    "test:app": "vitest --run test/app",
+    "test:app-components": "vitest --run test/app/components",
+    "test:app-pages": "vitest --run test/app/pages",
+    "test:server": "vitest --run test/server",
+    "test:shared": "vitest --run test/shared",
+    "test:server-core": "vitest --run test/server/core",
+    "test:server-api": "vitest --run test/server/api",
     "test:watch": "vitest",
     "test:ui": "vitest --ui --open"
   },
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@bg-dev/nuxt-naiveui": "2.0.0-rc.5",
+    "@electric-sql/pglite": "^0.3.7",
     "@faker-js/faker": "^9.9.0",
     "@iconify-json/mdi": "^1.2.3",
     "@loancrate/prisma-schema-parser": "^3.0.0",
@@ -101,6 +102,7 @@
     "fs-extra": "^11.3.1",
     "happy-dom": "^18.0.1",
     "json-schema-to-zod": "^2.6.1",
+    "pglite-prisma-adapter": "^0.6.1",
     "playwright-core": "^1.54.2",
     "pluralize": "^8.0.0",
     "prisma": "^6.13.0",
