--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nuxtjs/leaflet": "1.3.2",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/supabase": "^1.6.0",
+    "@pinia/nuxt": "0.11.2",
     "@prisma/client": "^6.13.0",
     "@tailwindcss/vite": "^4.1.11",
     "@turf/turf": "^7.2.0",
@@ -64,6 +65,7 @@
     "nuxt-gtag": "^3.0.3",
     "nuxt-zod-i18n": "1.11.5",
     "papaparse": "^5.5.3",
+    "pinia": "^3.0.3",
     "sharp": "^0.34.3",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.1.11",
@@ -116,5 +118,8 @@
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184",
   "prisma": {
     "schema": "server/services/prisma/schema.prisma"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
